Starts to align the Collections form with the Works form, but still looking for the HTML that renders the input groups.

--- a/app/assets/stylesheets/sufia/_settings.scss
+++ b/app/assets/stylesheets/sufia/_settings.scss
@@ -18,8 +18,9 @@ $icon-background-color-hover: $classic-white !default;
 $icon-border-color-hover: $gray-base !default;
 $icon-font-color-hover: $gray-base !default;
 
-// Collection Icon
+// Collection
 $collection-icon-search-lg: 8em !default;
+$required-color: $vermilion !default;
 
 // File Show Page
 $file-show-term-color: $gray-dark !default;
